--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mapbox/whoots-js": "^3.1.0",
     "csscolorparser": "~1.0.3",
     "earcut": "^2.2.2",
+    "geobuf": "^3.0.2",
     "geojson-vt": "^3.2.1",
     "gl-matrix": "^3.2.1",
     "grid-index": "^1.1.0",
